prevent table rows from collapsing when sorting

--- a/app/assets/stylesheets/application-core.css.scss
+++ b/app/assets/stylesheets/application-core.css.scss
@@ -288,7 +288,13 @@ table.ui-sortable {
       }
     }
   }
+
+  tr.ui-sortable-helper {
+    display: table;
+  }
 }
+
+
 
 
 
